--- a/prototype/rule.ini
+++ b/prototype/rule.ini
@@ -1,5 +1,8 @@
-ipv4 icmp 10.156.146.132 0 > 10.156.146.1 0
+any any :: 0 > :: 0
+any any 0.0.0.0 0 > 0.0.0.0 0
 ---
 사용가능 ip: ipv4, ipv6
 사용가능 프로토콜: arp(port 무시), tcp, udp, icmp(port 무시)
+사용가능 규칙: any any 0.0.0.0 0 > 0.0.0.0 0
+사용가능 규칙(ipv6): any any :: 0 > :: 0
 탐지규칙(예)(IDS이기 때문에 허용 차단 정책은 없음): ipv4 tcp [srcip] [srcport] > [dstip] [dstport]
